# vnvm

./: .gitignore  LMNOpc » Bitmap Font Builder.url  README.md  VNVM.hxproj  VNVM.nmeproj  VNVM.sln  application.nmml  application.xml  build-ios-simulator.sh  build_libs.bat  deploy.bat  engine_run.bat  pom.xml  run.bat  test.bat  test.hxml  test_android.bat  test_flash.bat  test_windows.bat  vnvm.ipr
PrompTranslate/: PrompTranslate.sln
PrompTranslate/PrompTranslate/: Form1.Designer.cs  Form1.cs  Program.cs  PrompTranslate.csproj
PrompTranslate/PrompTranslate/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
assets/: load.txt  logo.ai
assets/brave/: readme.txt
doc/: sqstdlib2.chw  squirrel2.chw
engine/: common.nut  lucon.ttf.ini  main.nut  math.nut  test.nut  test_sjis.txt  tests.nut
engine/cobra/: cod.nut  dat.nut  em.nut  gc.nut  ic.nut  info.txt  list.txt  main.nut  md.nut  voc.nut
engine/dividead/: ab.nut  ab_op.nut  dl1.nut  list.txt  lz.nut  main.nut  sg.nut
engine/game_selector/: main.nut
engine/hanabira/: mgd.nut  msd.nut
engine/jast0/: list.txt
engine/shuffle/: dgp.nut  list.txt  lz.nut  main.nut  pac.nut
engine/tlove/: dat.nut  dat_op.nut  list.txt  main.nut  mrs.nut  pak.nut
engine/utils/: animation.nut  component.nut  file.nut  input.nut  math.nut  string.nut  timer.nut  translation.nut
engine/ymk/: anm.nut  info.txt  interface.nut  list.txt  main.nut  resman.nut  rio.nut  rio_op.nut  rio_op_anim.nut  rio_op_audio.nut  rio_op_effects.nut  rio_op_flow.nut  rio_op_menus.nut  rio_op_scene.nut  rio_op_table.nut  rio_op_text.nut  rio_op_timer.nut  rio_op_version_pw.nut  scene.nut  state.nut  tbl.nut  wip.nut
engine/ymk/formats/: anm.nut  arc.nut  tbl.nut  wip.nut
extra/: kjmp2.cpp  mpeg.cpp
extra/mpeg_lib-1.3.1/: 24bit.c  2x2.c  Makefile.extras  Makefile.in  build_bc.bat  build_msvc.bat  config.h  config.h.in  config.h.win  configure  configure.in  decoders.c  decoders.h  dither.h  fs2.c  fs2.h  fs2fast.c  fs4.c  fs4.h  gdith.c  globals.c  globals.h  hybrid.c  hybriderr.c  jrevdct.c  mb_ordered.c  mono.c  motionvector.c  mpeg.h  ordered.c  ordered2.c  parseblock.c  proto.h  util.c  util.h  video.c  video.h  wrapper.c
extra/mpeg_lib-1.3.1/doc/: mpeg_lib.aux  mpeg_lib.dvi
extra/mpeg_lib-1.3.1/extras/: Makefile.in  ParseArgv.c  ParseArgv.h  easympeg.c  mpegtest.c
game_data/: readme.txt
game_data/ymk/translation/: T001_06B.nut
old/: .munit  application.nmml  build-ios.sh  test_release_windows.bat  test_windows.bat
old/src/: Main.hx  Sandbox.hx
old/src/common/: BitUtils.hx  IteratorUtilities.hx  StageReference.hx
old/src/lang/: IDisposable.hx  ObjectUtils.hx  Reference.hx  ReferenceCounter.hx  ReflectedObject.hx
old/src/midi/: ByteArrayTools.hx  EventFollower.hx  FloatPlayhead.hx  Interpolator.hx  LFO.hx  MIDIPlayer.hx  MIDITuning.hx  SFZ.hx  SFZBank.hx  SFZCompressor.hx  SampleMipMap.hx  (+7 more)
src/: FilteredSprite.hx  Main.hx  Sandbox.hx  engine.cpp  engine_class_audio.h  engine_class_base.h  engine_class_bitmap.h  engine_class_effect.h  engine_class_font.h  engine_class_joypad.h  engine_class_keyboard.h  engine_class_mouse.h  engine_class_movie.h  engine_class_music.h  engine_class_sound.h  engine_common.h  engine_iconv.h  engine_iconv_table_shiftjis.h  engine_impl_audio_sdl.h  engine_impl_movie_sdl_ffmpeg.h  engine_impl_movie_sdl_smpeg.h  engine_impl_sdl.h  engine_impl_video_sdl.h  engine_impl_video_sdl_effect.h  engine_impl_video_sdl_font.h  engine_md5.h  engine_plat.h  engine_plat_win32.h  engine_utils.h
src/common/: Animation.hx  ArrayUtils.hx  AssetsFileSystem.hx  AssetsFileSystemAs3.hx  AssetsFileSystemCpp.hx  BitUtils.hx  BitmapDataUtils.hx  ByteArrayUtils.hx  ByteUtils.hx  Debug.hx  Event2.hx  EventListenerGroup.hx  EventListenerOnce.hx  EventUtils.hx  GameInput.hx  GameScalerSprite.hx  GenericMatrix2D.hx  GraphicUtils.hx  IAssetsFileSystem.hx  IteratorUtilities.hx  Keys.hx  LangUtils.hx  Log2.hx  MathEx.hx  PathUtils.hx  PromiseUtils.hx  Reference.hx  SpriteUtils.hx  StageReference.hx  StringEx.hx  Timer2.hx
src/include/: squirrel.h
src/lang/: DisposableGroup.hx  DisposableHolder.hx  DisposableList.hx  GenericMatrix2D.hx  LangMacros.hx  LangUtils.hx  MathEx.hx  ObjectUtils.hx  Reference.hx  StringEx.hx
src/midi/: Audio.hx  ByteArrayTools.hx  Codec.hx  CopyLoop.hx  CycleBuilder.hx  Envelope.hx  ExtendedByteArray.hx  FastFloatBuffer.hx  LFSR.hx  MathTools.hx  SMF.hx  SMFParser.hx  SamplerSynth.hx  SoftSynth.hx  SynthTools.hx  WAV.hx
src/reflash/: Bytes3.hx  IGLContext.hx  IGLTexture.hx
src/smpeg/: MPEG.cpp  MPEGlist.h
src/sqstdlib/: sqstdaux.cpp  sqstdblob.cpp  sqstdstream.cpp  sqstdstring.cpp  sqstdsystem.cpp
src/vfs/: BytesStream.hx  FileStream.hx  HttpFileSystem.hx  HttpStream.hx  LocalFileSystem.hx  SliceStream.hx  Stream.hx  StreamBase.hx  SubVirtualFileSystem.hx  VirtualFileSystem.hx  VirtualFileSystemBase.hx
test/: TestSuite.hx
test/common/: MathExTest.hx
test/extra/: ByteArrayTest.hx  MacroTest.hx
translation_toolkit/: jslibs - Project Hosting on Google Code.url
utils/: font_gen.php  generate_shift_jis_table.php  will_translate.php
vnvm-common/: pom.xml
vnvm-common/test/: instructiontest.kt  isotest.kt  structtest.kt  uitest.kt
vnvm-common/testassets/: hello.iso
vnvm-engine-dividead/: pom.xml
vnvm-engine-dividead/test/: dl1test.kt
vnvm-engine-truelove/: pom.xml
vnvm-launcher/: pom.xml
vnvm-launcher-desktop/: pom.xml
vnvm-launcher-desktop/assets/: font.fnt  systemfont.fnt
vnvm-launcher-desktop/src/: main.kt
(+744 files in other folders)
